--- a/Ratatouille_Project/app/src/main/res/layout/activity_main.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.jl.ratatouille.MainActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/OpeningText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Finding Remy"
+        android:layout_above="@+id/ButtonToLogin"
+        />
 
+    <Button
+        android:id="@+id/ButtonToLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
