--- a/Ratatouille_Project/app/src/main/res/layout/activity_login.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="37dp"
-        android:text="Username:"
+        android:text="@string/username"
         android:textIsSelectable="false"
         android:textSize="30sp" />
 
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText2"
         android:layout_marginTop="121dp"
-        android:text="Password"
+        android:text="@string/password"
         android:textSize="30sp" />
 
     <EditText
@@ -50,7 +50,7 @@
         android:id="@+id/ButtonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/login"
         android:layout_below="@+id/editText"
         android:layout_toRightOf="@+id/TextViewUsername"
         android:layout_toEndOf="@+id/TextViewUsername"
