--- a/Ratatouille_Project/app/src/main/res/layout/activity_registration.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_registration.xml
@@ -1,59 +1,59 @@
-<?xml version = "1.0" encoding = "utf-8"?>
-<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
-    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height = "match_parent" tools:context = ".MainActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
-        android:id = "@+id/registration_text_title"
-        android:text = "Registration"
+        android:id="@+id/registration_text_username"
         android:layout_width="wrap_content"
-        android:layout_height = "wrap_content"
-        android:textSize = "35dp"
-        android:layout_alignParentTop = "true"
-        android:layout_centerHorizontal = "true" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="37dp"
+        android:text="@string/username"
+        android:textIsSelectable="false"
+        android:textSize="30sp" />
 
     <EditText
-        android:id = "@+id/registration_edit_username"
-        android:hint = "Enter Username"
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:layout_marginTop = "46dp"
-        android:layout_below = "@+id/registration_text_title"
-        android:layout_alignParentLeft = "true"
-        android:layout_alignParentStart = "true"
-        android:layout_alignParentRight = "true"
-        android:layout_alignParentEnd = "true" />
+        android:id="@+id/registration_edit_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:layout_below="@+id/registration_text_username"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/registration_text_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/registration_edit_username"
+        android:layout_marginTop="121dp"
+        android:text="@string/password"
+        android:textSize="30sp" />
 
     <EditText
         android:id="@+id/registration_edit_password"
-        android:hint="Enter Password"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:ems="10"
         android:inputType="textPassword"
-        android:layout_below="@+id/registration_edit_username"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/registration_edit_username"
-        android:layout_alignEnd="@+id/registration_edit_username"
-        android:textColorHint="#ffff299f"
-        />
+        android:layout_below="@+id/registration_text_password"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:id="@+id/registration_button_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="login"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/registration_text_title"
-        android:layout_toStartOf="@+id/registration_text_title" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cancel"
-        android:id="@+id/button2"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/registration_text_title"
-        android:layout_toEndOf="@+id/registration_text_title" />
+        android:text="@string/login"
+        android:layout_below="@+id/registration_edit_password"
+        android:layout_toRightOf="@+id/registration_text_username"
+        android:layout_toEndOf="@+id/registration_text_username"
+        android:layout_marginTop="66dp" />
 
 </RelativeLayout>
