--- a/Ratatouille_Project/app/src/main/res/layout/activity_registration.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_registration.xml
@@ -50,7 +50,7 @@
         android:id="@+id/registration_button_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login"
+        android:text="@string/register"
         android:layout_below="@+id/registration_edit_password"
         android:layout_toRightOf="@+id/registration_text_username"
         android:layout_toEndOf="@+id/registration_text_username"
