--- a/Ratatouille_Project/app/src/main/res/layout/activity_registration.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_registration.xml
@@ -45,7 +45,8 @@
             android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:typeface="monospace"/>
+            android:typeface="monospace"
+            android:checked="true"/>
 
         <RadioButton
             android:id="@+id/radioBtn_admin"
