--- a/Ratatouille_Project/app/src/main/res/layout/activity_app.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_app.xml
@@ -3,11 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
+    <Button
+        android:id="@+id/btn_logout"
+        android:text="@string/logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="App Successful!!!!!" />
+        android:layout_centerVertical="true" />
 </RelativeLayout>
