--- a/Ratatouille_Project/app/src/main/res/layout/activity_main.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_main.xml
@@ -5,17 +5,17 @@
 
     <TextView
         android:id="@+id/OpeningText"
+        android:text="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/finding_remy"
         android:layout_marginTop="175dp"
-        android:layout_marginLeft="115dp"
+        android:layout_centerHorizontal="true"
         android:textSize="25sp"
         />
 
     <Button
-        android:text="Login"
         android:id="@+id/ButtonToLogin"
+        android:text="Login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/OpeningText"
@@ -23,8 +23,8 @@
         />
 
     <Button
-        android:text="Register"
         android:id="@+id/ButtonToRegister"
+        android:text="Register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ButtonToLogin"
