--- a/Ratatouille_Project/app/src/main/res/layout/activity_main.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:text="@string/finding_remy"
         android:layout_marginTop="175dp"
-        android:layout_marginLeft="115dp"
+        android:layout_centerHorizontal="true"
         android:textSize="25sp"
         />
 
@@ -19,7 +19,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/OpeningText"
-        android:layout_marginLeft="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         />
 
     <Button
@@ -28,7 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ButtonToLogin"
-        android:layout_marginLeft="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         />
 
 
