--- a/Ratatouille_Project/app/src/main/res/layout/activity_app.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_app.xml
@@ -4,12 +4,21 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/success"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="App Successful!!!!!" />
+
+    <TextView
+        android:id="@+id/getemgood"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_below="@+id/success"
+        />
 
     <Button
         android:id="@+id/btn_logout"
@@ -18,5 +27,5 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_below="@+id/textView"/>
+        android:layout_below="@+id/getemgood"/>
 </RelativeLayout>
