--- a/Ratatouille_Project/app/src/main/res/layout/activity_app.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_app.xml
@@ -20,6 +20,15 @@
         android:layout_below="@+id/success"
         />
 
+    <ListView
+        android:id="@+id/ratList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_below="@+id/btn_logout"
+    />
+
     <Button
         android:id="@+id/btn_logout"
         android:text="@string/logout"
