--- a/Ratatouille_Project/app/src/main/res/layout/activity_rat_list.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_rat_list.xml
@@ -13,6 +13,14 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"/>
 
+    <Button
+        android:id="@+id/btn_addRat"
+        android:text="Add Rat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rat_recycler_view"
         android:scrollbars="vertical"
