implemented listeners for navigation bar

--- a/Ratatouille_Project/app/src/main/res/layout/activity_settings.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_settings.xml
@@ -2,12 +2,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btn_logout"
-        android:text="@string/logout"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/map_coordinator"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:layout_above="@+id/bottom_navigation_settings">
+
+        <Button
+            android:id="@+id/btn_logout"
+            android:text="@string/logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
+    </android.support.design.widget.CoordinatorLayout>
+
+    <android.support.design.widget.BottomNavigationView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/bottom_navigation_settings"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="start"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"/>
+        app:menu="@menu/bottom_navigation_items"
+        app:itemBackground="@color/gray"
+        app:itemTextColor="@color/black"
+        app:itemIconTint="@color/black"/>
 
 </RelativeLayout>
