--- a/Ratatouille_Project/app/src/main/res/layout/activity_maps.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_maps.xml
@@ -1,5 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/map_coordinator"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:layout_above="@+id/bottom_navigation_maps">
+
+        <ProgressBar
+            android:id="@+id/progressBar_maps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="top|right"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_addRat_maps"
+            android:src="@drawable/ic_add_black_24dp"
+            app:fabSize="mini"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="bottom|end"
+            android:backgroundTint="@color/black"
+            android:tint="@color/white"
+            app:borderWidth="0dp"
+            app:elevation="2dp"/>
+
+
+    </android.support.design.widget.CoordinatorLayout>
+
+    <android.support.design.widget.BottomNavigationView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/bottom_navigation_maps"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_navigation_items"
+        app:itemBackground="@color/gray"
+        app:itemTextColor="@color/black"
+        app:itemIconTint="@color/black"/>
 
 </RelativeLayout>
