--- a/Ratatouille_Project/app/src/main/res/layout/activity_rat_list.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_rat_list.xml
@@ -8,11 +8,11 @@
 
 
     <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/main_coordinator"
+        android:id="@+id/list_coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        android:layout_above="@+id/navigation">
+        android:layout_above="@+id/bottom_navigation_list">
 
         <ProgressBar
             android:id="@+id/progressBar_ratList"
@@ -24,11 +24,17 @@
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btn_addRat"
             android:src="@drawable/ic_add_black_24dp"
-            app:fabSize="normal"
+            app:fabSize="mini"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:layout_gravity="bottom|right"/>
+            android:layout_gravity="bottom|end"
+            app:layout_anchor="@+id/rat_recycler_view"
+            app:layout_anchorGravity="bottom|right|end"
+            android:backgroundTint="@color/black"
+            android:tint="@color/white"
+            app:borderWidth="0dp"
+            app:elevation="2dp"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rat_recycler_view"
@@ -41,11 +47,14 @@
     <android.support.design.widget.BottomNavigationView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/navigation"
+        android:id="@+id/bottom_navigation_list"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_navigation_items" />
+        app:menu="@menu/bottom_navigation_items"
+        app:itemBackground="@color/gray"
+        app:itemTextColor="@color/black"
+        app:itemIconTint="@color/black"/>
 
 </RelativeLayout>
