--- a/Ratatouille_Project/app/src/main/res/values/colors.xml
+++ b/Ratatouille_Project/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#aeaeae</color>
+    <color name="gray">#cccccc</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
