--- a/Ratatouille_Project/app/src/main/res/layout/activity_maps.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_maps.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:map="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,6 +13,23 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         android:layout_above="@+id/bottom_navigation_maps">
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.example.jl.ratatouille.activity.MapsActivity">
+
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </FrameLayout>
+
 
         <ProgressBar
             android:id="@+id/progressBar_maps"
@@ -32,7 +50,6 @@
             android:tint="@color/white"
             app:borderWidth="0dp"
             app:elevation="2dp"/>
-
 
     </android.support.design.widget.CoordinatorLayout>
 
