--- a/Ratatouille_Project/app/src/main/res/layout/activity_add_rat.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_add_rat.xml
@@ -16,6 +16,8 @@
     <EditText
         android:id="@+id/editTxt_created_date"
         android:hint="Date"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         style="@style/EditTextStyle"
         android:layout_marginTop="12dp"/>
 
