Revert "fixing intellij lint errors"
This reverts commit 5a1c68adc81fcb7c3f013ecafbf5a9d7d173bae0.

--- a/Ratatouille_Project/app/src/main/res/layout/activity_add_rat.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_add_rat.xml
@@ -15,7 +15,7 @@
 
     <EditText
         android:id="@+id/editTxt_created_date"
-        android:hint="@string/Date"
+        android:hint="Date"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         style="@style/EditTextStyle"
