--- a/Ratatouille_Project/app/src/main/res/menu/bottom_navigation_items.xml
+++ b/Ratatouille_Project/app/src/main/res/menu/bottom_navigation_items.xml
@@ -1,18 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/action_map"
-        android:title="@string/Map"
+        android:title="Map"
         android:icon="@drawable/ic_map_black_24dp" />
 
     <item android:id="@+id/action_list"
-        android:title="@string/List"
+        android:title="List"
         android:icon="@drawable/ic_view_list_black_24dp" />
 
     <item android:id="@+id/action_graph"
-        android:title="@string/Graph"
+        android:title="Graph"
         android:icon="@drawable/ic_show_chart_black_24dp" />
 
     <item android:id="@+id/action_settings"
-        android:title="@string/Settings"
+        android:title="Settings"
         android:icon="@drawable/ic_settings_black_24dp" />
 </menu>
