--- a/Ratatouille_Project/app/src/main/res/layout/activity_maps.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_maps.xml
@@ -28,23 +28,26 @@
                 android:layout_height="match_parent" />
         </FrameLayout>
 
-
-        <ProgressBar
+        <!--<ProgressBar
             android:id="@+id/progressBar_maps"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:layout_gravity="top|right"/>
+            android:layout_gravity="top|right"/>-->
 
-        <Button
+        <android.support.design.widget.FloatingActionButton
             android:id="@+id/map_filter"
-            android:text="@string/filter"
+            android:src="@drawable/ic_search_black_24dp"
+            app:fabSize="mini"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_anchor="@+id/btn_addRat_maps"
-            app:layout_anchorGravity="bottom"
             android:layout_margin="16dp"
-            android:typeface="monospace"/>
+            android:paddingBottom="16dp"
+            android:layout_gravity="top|end"
+            android:backgroundTint="@color/black"
+            android:tint="@color/white"
+            app:borderWidth="0dp"
+            app:elevation="2dp"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btn_addRat_maps"
