--- a/Ratatouille_Project/app/src/main/res/layout/activity_main.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         />
 
     <Button
-        android:text="Login"
+        android:text="@string/login"
         android:id="@+id/ButtonToLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
         />
 
     <Button
-        android:text="Register"
+        android:text="@string/register"
         android:id="@+id/ButtonToRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
