Fix XML warnings

--- a/Ratatouille_Project/app/src/main/res/layout/activity_rat_view.xml
+++ b/Ratatouille_Project/app/src/main/res/layout/activity_rat_view.xml
@@ -5,5 +5,5 @@
     <ListView
         android:id="@+id/rat_list_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="wrap_content" />
 </RelativeLayout>
